--- a/responsive.css
+++ b/responsive.css
@@ -1,34 +1,31 @@
-
+*{
+   margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
  	font-family: 'Lora', serif; 
 	background-color:#384346;
 	
 }
 .wrapper{
-  max-width: 1024px;
-    margin: 0 auto;
-
-}
-
-.box {
-   float: right;
-   position: relative;
-   width: 33%; /*20%*/
-   padding-bottom: 32%;
-    
+ margin: 0 auto;
    
 }
-.boxInner {
-   position: absolute;
-   left: 10px;
-   right: 10px;
-   top: 10px;
-   bottom: 10px;
+
+ul {
+  list-style: none;
+   
+}
+picture img{
+  max-width: 100%;
+}
+
+li {
+   float: left;
+    margin-left: 4px;
    
     
-}
-.boxInner img {
-   width: 100%;
 }
 
 footer p{
@@ -44,19 +41,19 @@ footer p{
 }
 
 
-@media all and (max-width : 600px) {
-   /* Smartphone view: 1 tile */
+/*@media all and (max-width : 600px) {
+ 
    .box {
       width: 100%;
       padding-bottom: 100%;
    }
 }
 @media all and (min-width : 601px) and (max-width : 1024px)  {
-   /* Tablet view: 2 tiles */
+  
    .box {
       width: 50%;
       padding-bottom: 50%;
    }
     
-}
+} */
 
